fixed overflow-x

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -18,7 +18,7 @@
     width: 100%;
     display: inline-block;
     height: clamp(35px, 8vw, 152px);
-    background: url("../img/footer-winter-tree.png") center center/100% 105% no-repeat;
+    background: url("../img/footer-winter-tree.png") center center/100% 100% no-repeat;
   }
 
   .answer {
