--- a/src/scss/_partners.scss
+++ b/src/scss/_partners.scss
@@ -1,21 +1,26 @@
 .partners {
+  overflow: hidden;
+
   &__row {
-    justify-content: space-around;
-    gap: 1.5em;
-    padding: 0 15px;
-    flex-wrap: wrap;
+    //justify-content: space-around;
+    //gap: 1.5em;
+    //padding: 0 15px;
+    //flex-wrap: wrap;
+    gap: 0.5em;
+    display: grid;
+    place-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(80px, 17%));
   }
 
   .col {
-    flex: 1 1 16%;
-    height: clamp(41px, 2vw, 81px);
+    //flex: 0 0 15%;
+    //height: clamp(41px, 2vw, 81px);
     display: flex;
     justify-content: center;
     align-items: center;
 
     img {
       max-width: 100%;
-      max-height: 100%;
     }
   }
 }
