--- a/src/scss/_promotion.scss
+++ b/src/scss/_promotion.scss
@@ -17,7 +17,7 @@
     width: 100%;
     display: inline-block;
     height: clamp(44px, 12vw, 315px);
-    background: url("../img/winter-tree.svg") center center/100% 150% no-repeat;
+    background: url("../img/winter-tree.svg") center center/100% 100% no-repeat;
   }
 
   &::before {
